--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -11,7 +11,8 @@
   position: sticky;
   top: 0;
   z-index: 100;
-  background-color: #326da8;
+  background-color: #1565c0;
+  width: 100%;
 }
 .Header_Icons {
   display: flex;
